@@ -1,3 +1,8 @@
+2024-09-28  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* euptex-{ctrlsym,kinsoku,prntknj}.test:
+	Skip tests with updvitype if updvitype are not built.
+
 2024-09-21  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* eptex.ech, pdfutils.ch:
